Input of type date does not respect scroll-margin CSS
Categories
(Core :: Layout: Form Controls, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox94 | --- | fixed |
People
(Reporter: v.gorte, Assigned: emilio)
Details
Attachments
(1 file, 1 obsolete file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/93.0.4577.63 Safari/537.36
Steps to reproduce:
Have a form with multiple input fields (text, number, date, etc) on a webpage with a fixed header. Since the form validation causes the invalid input field to be scrolled to (top of the viewport), the input field would be obscurred by the fixed header. Use scroll-margin-top to account for fixed header height when the form causes scrolling
Codepen minimal code example:
https://codepen.io/xxxdoTest/pen/NWgrBQM
Actual results:
scroll-margin is respected by all types of input fields, except for date input fields.
Expected results:
date input fields should respect the scroll-margin.
Comment 1•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Layout: Scrolling and Overflow' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 2•4 years ago
|
||
No behavior change, just drive-by cleanup (next patch adds some comments to it).
Depends on D124689
| Assignee | ||
Comment 3•4 years ago
|
||
Depends on D124690
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Comment 6•4 years ago
|
||
| bugherder | ||
Description
•