Bug 1729292 - Honor scroll margin of host when we're scrolling to a chrome-only-access element. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D124691